fix(Chat, maintainScrollPosition): doesn't scroll exactly to the bottom (fix 16px gap)

--- a/src/assets/styles/components/_chat.scss
+++ b/src/assets/styles/components/_chat.scss
@@ -109,7 +109,7 @@ $scroll-bar-width: 4px;
     }
 
     &--transition {
-      transition: all 0.4s;
+      transition: left 0.4s;
     }
 
     &--disable-max-width {
